// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue should display only "Home" link when the user is not authenticated 1`] = `
<div id="app">
  <div class="flex items-center p-4">
    <div class="flex-1"></div>
    <div id="nav" class="flex-1">
      <router-link-stub to="/" tag="a" event="click">Home</router-link-stub>
      <!---->
    </div>
    <div class="flex-1 text-right">
      <localechanger-stub></localechanger-stub>
      <googlesigninbutton-stub></googlesigninbutton-stub>
    </div>
  </div>
  <router-view-stub name="default"></router-view-stub>
</div>
`;

exports[`App.vue should display restricted links when the user is authenticated 1`] = `
<div id="app">
  <div class="flex items-center p-4">
    <div class="flex-1"></div>
    <div id="nav" class="flex-1">
      <router-link-stub to="/" tag="a" event="click">Home</router-link-stub>
      | <router-link-stub to="/test" tag="a" event="click">Test</router-link-stub>
      | <router-link-stub to="/foo" tag="a" event="click">Foo</router-link-stub>
    </div>
    <div class="flex-1 text-right">
      <localechanger-stub></localechanger-stub>
      <googlesigninbutton-stub></googlesigninbutton-stub>
    </div>
  </div>
  <router-view-stub name="default"></router-view-stub>
</div>
`;
